[package]
name = "pi_clock"
version = "0.1.0"
authors = ["Rob Dimsdale-Zucker <robert.dimsdale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
log = "0.4.13"
num-traits = "0.2.14"
rand = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
simplelog = "0.9.0"
structopt = "0.3.21"
ureq = { version = "1.5.4", features = ["json"] }

[target.'cfg(target_arch = "arm")'.dependencies]
adafruit-alphanum4 = "0.1.2"
adafruit-7segment = "0.1.0"
display-interface-spi = "0.4.0"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.4"
hd44780-driver = "0.4.0"
ht16k33 = "0.4.0"
ili9341 = "0.4.1"
linux-embedded-hal = "0.3"
rppal = {version = "0.11.3", features = ["hal"]}
veml6030 = "0.1.2"