[package]
name = "pi_clock"
version = "0.1.0"
authors = ["Rob Dimsdale-Zucker <robert.dimsdale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"
log = "0.4.26"
num-traits = "0.2.19"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
structopt = "0.3.21"
ureq = { version = "2.9.1", features = ["json"] }

adafruit-alphanum4 = {version = "0.1.2", optional = true}
adafruit-7segment = {version = "0.1.0", optional = true}
display-interface-spi = {version = "0.5.0", optional = true}
embedded-hal = {version = "1.0.0", optional = true}
hd44780-driver = {version = "0.4.0", optional = true}
ht16k33 = {version = "0.4.0", optional = true}
linux-embedded-hal = {version = "0.3", optional = true}
rppal = {version = "0.22.1", features = ["hal"], optional = true}
veml6030 = {version = "0.1.2", optional = true}

[features]
rpi-hw = [
  "dep:adafruit-alphanum4",
  "dep:adafruit-7segment",
  "dep:display-interface-spi",
  "dep:embedded-hal",
  "dep:hd44780-driver",
  "dep:ht16k33",
  "dep:linux-embedded-hal",
  "dep:rppal",
  "dep:veml6030",
  ]
